--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "simplescript-lang"
-version = "2.0.0"
+version = "2.1.0"
 description = "A simple programming language interpreter supporting variables, functions, loops, and conditionals"
 readme = "README.md"
 license = {text = "MIT"}
@@ -50,6 +50,7 @@ dev = [
     "sphinx>=7.0",
     "sphinx-rtd-theme>=2.0",
     "flake8>=6.0",
+    "black>=24.0",
 ]
 
 [tool.setuptools.packages.find]
